# axie_breed

./: .gitignore  AUTHORS  ChangeLog  Makefile  README.md  Requirements.txt  SQLQueries  SQLQueries.sql  axiedata.json  createdb  environment_dev.yml  fetch&load  fetch&load.py  graphql.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  sqlqueries.sql  test_notebook.ipynb
Queries/: BestPrices.sql  DebugOne.sql  MedianPrice.sql  SpecificAxie.sql  SpecificMedianPrice.sql  benTest.sql
scripts/: MedianPriceTrend.py  TopThreeVolume.py  fetch&load.py  graphql.py  notification.py
servers/: do-setup.txt
src/: postgres.py
