[metadata]
name = Axie Breed
description = Repo for Axie Insights
description_file = README.md
url = https://github.com/silobs23/axie_breed

[options]
zip_safe = False
package_dir =
    =src
packages = find:
scripts = 
   scripts/createdb.py
   scripts/fetch&load.py
   scripts/graphql.py
install_requires =
    pandas
test_suite = test_suite
tests_requires = 
    pytest
    tox
include_package_data=True

[options.packages.find]
where=src
